--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body{
     font-weight: 500;
 }
 .team-card img{
-    width: 70px;
-    height: 70px;
+    max-height: 100%;
+    object-fit: cover;
+
 }
+
